--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
-    width: 500px;
+    width: 700px;
     height: 300px;
     background-color: aliceblue;
     display: flex;
